--- a/app/src/main/res/layout/add_product.xml
+++ b/app/src/main/res/layout/add_product.xml
@@ -20,7 +20,7 @@
         android:id="@+id/nameAdd"
         android:layout_width="305dp"
         android:layout_height="59dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:text="Название"
@@ -35,22 +35,20 @@
         android:layout_width="72dp"
         android:layout_height="34dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
         android:text="Цена:"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameAdd" />
+        app:layout_constraintTop_toBottomOf="@+id/categotyAdd" />
 
     <TextView
         android:id="@+id/priceAdd"
         android:layout_width="152dp"
         android:layout_height="34dp"
-        android:layout_marginTop="30dp"
         android:gravity="center"
         android:text="стоимость"
         android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/nameAdd" />
+        app:layout_constraintTop_toBottomOf="@+id/categotyAdd" />
 
     <TextView
         android:id="@+id/textView4"
@@ -79,12 +77,11 @@
         android:id="@+id/textView6"
         android:layout_width="82dp"
         android:layout_height="35dp"
-        android:layout_marginTop="30dp"
+        android:gravity="center"
         android:text="руб/кг"
         android:textSize="16dp"
-        android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/priceAdd"
-        app:layout_constraintTop_toBottomOf="@+id/nameAdd" />
+        app:layout_constraintTop_toBottomOf="@+id/categotyAdd" />
 
     <Button
         android:id="@+id/buttonAdd"
@@ -118,5 +115,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
+
+    <TextView
+        android:id="@+id/categotyAdd"
+        android:layout_width="71dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="1dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameAdd" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
