--- a/app/src/main/res/layout/list_basket.xml
+++ b/app/src/main/res/layout/list_basket.xml
@@ -58,6 +58,15 @@
                 android:textSize="16dp"
                 app:layout_constraintStart_toEndOf="@+id/weightBasket"
                 app:layout_constraintTop_toBottomOf="@+id/nameBasket" />
+
+            <Button
+                android:id="@+id/delete_button"
+                android:layout_width="115dp"
+                android:layout_height="51dp"
+                android:text="Удалить"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/nameBasket"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
