--- a/app/src/main/res/layout/pay_basket.xml
+++ b/app/src/main/res/layout/pay_basket.xml
@@ -7,6 +7,17 @@
     tools:context=".PaymentActivity">
 
     <TextView
+        android:id="@+id/moneyView"
+        android:layout_width="115dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
+        android:text="Рублей"
+        android:textSize="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/paymentRadioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/bonusSwitch" />
+
+    <TextView
         android:id="@+id/textView"
         android:layout_width="108dp"
         android:layout_height="48dp"
@@ -39,7 +50,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
         android:text="Списать баллы"
-        android:textSize="24dp"
+        android:textSize="18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/totalPriceView" />
 
@@ -54,12 +65,12 @@
 
     <RadioGroup
         android:id="@+id/paymentRadioGroup"
-        android:layout_width="354dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="193dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
         android:checkedButton="@+id/cardRadioButton"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pointsTextView">
 
